# cicd-demo-dataweek2025

./: .gitignore  README.md  devops-conda-env.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/analysis/: max.py  mean.py  min.py
app/data/: dwd_leipzig_temp.csv
scripts/: check_tests.py
tests/: test_analysis_common.py  test_mean.py  test_min.py
